objects/SAC_Constants__c.object
<CustomObject>
    <fields>
        <fullName>Constant1__c</fullName>
        <label>Constant1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Constant2__c</fullName>
        <label>Constant2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Constant3__c</fullName>
        <label>Constant3</label>
        <type>TextArea</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Constants related to SAC</description>
    <label>Support Request Constants</label>
</CustomObject>